--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ timezone: # see https://en.wikipedia.org/wiki/List_of_tz_database_time_zones for
 ##############################
 author:
   type      : # "person" (default), "organization"
-  name      : Your Name
+  name      : Kefu Zheng
   url       :
   avatar    : # path or url of avatar image
   bio       : I am an amazing person.
@@ -52,7 +52,7 @@ author:
 
 ## => GitHub Repository (if the site is hosted by GitHub)
 ##############################
-repository: user_name/repo_name
+repository: kefuzheng/kefuzheng.github.io
 repository_tree: master
 
 
