--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,9 @@ text_skin: default # "default" (default), "dark", "forest", "ocean", "chocolate"
 highlight_theme: default # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
 url     : # the base hostname & protocol for your site e.g. https://www.someone.com
 baseurl : # does not include hostname
-title   : Kefu`s Working & Learning Center
+title   : Kefu Working & Learning Center
 description: > # this means to ignore newlines until "Language & timezone"
-  Kefu`s Working & Learning Center
+  Kefu Working & Learning Center
 
 
 ## => Language and Timezone
